ext_ingress_nodeport/service_nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  labels:
    app: nginx
    type: nodeport
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: nginx
  type: NodePort
