ext_ingress_nodeport/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-global-lb-ext-ip"
spec:
  rules:
  - http:
      paths:
      - path: /abc
        backend:
          serviceName: nginx-nodeport
          servicePort: 80
      - path: /discounted
        backend:
          serviceName: nginx-nodeport
          servicePort: 80
